--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
 <hr>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4fbYByR2rfMwI9WuyoGwHfVDahbvW6URhRvogVLUtaw8FPQ/viewform?embedded=true" width="640" height="506" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4fbYByR2rfMwI9WuyoGwHfVDahbvW6URhRvogVLUtaw8FPQ/viewform?embedded=true" width="640" height="506" frameborder="0" marginheight="0" marginwidth="0" align="middle">Loading...</iframe>
 <footer>
   <div class="container">
     <div class="row">
