--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,6 +18,9 @@
           <a class="nav-link" href="{{"/posts" | relative_url }}">Articles</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{"https://labs.kryptomesh.com/posts" | relative_url }}">LABs</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
       </ul>
